Issue #2341: Add a Py3k warning when raising an exception that doesn't derive from BaseException.